syntax = "proto3";
package fifsky.blog.api.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";

option go_package = "gen/api/v1";

// GuestbookService 提供留言本相关的接口
service GuestbookService {
  // List 获取留言列表
  rpc List(GuestbookListRequest) returns (GuestbookListResponse) {
    option (google.api.http) = {
      post: "/blog/guestbook/list"
      body: "*"
    };
  }

  // Create 创建留言
  rpc Create(GuestbookCreateRequest) returns (GuestbookCreateResponse) {
    option (google.api.http) = {
      post: "/blog/guestbook/create"
      body: "*"
    };
  }
}

// GuestbookListRequest 留言列表分页请求
message GuestbookListRequest {
  int32 page = 1 [(buf.validate.field).int32.gt = 0];
}

// GuestbookItem 留言项
message GuestbookItem {
  int32 id = 1;
  string name = 2;
  string content = 3;
  string ip = 4;
  string created_at = 5;
}

// GuestbookListResponse 留言列表响应
message GuestbookListResponse {
  repeated GuestbookItem list = 1;
  int32 total = 2;
}

// GuestbookCreateRequest 创建留言请求
message GuestbookCreateRequest {
  string name = 1 [
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 50
  ];
  string content = 2 [
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 255
  ];
}

// GuestbookCreateResponse 创建留言响应
message GuestbookCreateResponse {
  int32 id = 1;
}
